jlamontSC-test/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>RSVP_Page_Title__c</fullName>
        <inlineHelpText>Set a title for your RSVP page; If no value is entered, the Event Name will be used.</inlineHelpText>
        <label>RSVP Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Count__c</fullName>
        <label>Recruitment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecurringEvent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>RecurringEvent</label>
        <referenceTo>RecurringEvent__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recurring_Dates__c</fullName>
        <label>Recurring Dates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Cutoff__c</fullName>
        <label>Registration Cutoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registrations_Accepted__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If unchecked, there will be no option for users to RSVP, but an Event Details page will still be created.</inlineHelpText>
        <label>Registrations Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Convio_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Convio version of the action alert.</inlineHelpText>
        <label>Related Convio Action</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.Name</field>
                <operation>equals</operation>
                <value>Advocacy Form</value>
            </filterItems>
            <filterItems>
                <field>Campaign.Converted_From_Convio__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Related Convio Action)</relationshipLabel>
        <relationshipName>Campaigns5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Effort__c</fullName>
        <label>Renewal Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Expire_Group__c</fullName>
        <description>Date at which membership expires for the target renewal group.  Renewal promotions only.</description>
        <label>Renewal Expire Group</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Status__c</fullName>
        <formula>IF( ISBLANK(End_Date__c), 
IF(Start_Date__c &gt;= TODAY(), TEXT(Status__c), 
IF(IsPickVal(Status__c, &quot;Active&quot;) || isPickVal(Status__c,&quot;At Capacity&quot;), &quot;Event Ended&quot;, TEXT(Status__c))) 
, 
IF(End_Date__c &gt;= TODAY(), TEXT(Status__c), 
IF(IsPickVal(Status__c, &quot;Active&quot;) || isPickVal(Status__c,&quot;At Capacity&quot;), &quot;Event Ended&quot;, TEXT(Status__c))) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require_Additional_Attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Additional Attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Field 1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Field 2?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Field_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Field 3?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Mobile_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Mobile Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Phone Number?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_Street_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Street Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Require_ZIP_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require ZIP Code?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Alert_ID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Salesforce Alert ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Segment_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Custom Code 2 in Neobiz</inlineHelpText>
        <label>Segment Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Segment Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Segment Group)</relationshipLabel>
        <relationshipName>Campaigns_Segment_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Count__c</fullName>
        <label>Selected Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Date__c</fullName>
        <description>Date selection was made</description>
        <label>Selected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Send_RSVP_to_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Primary Leader will receive an email notification each time a user registers for the event. Registrations must be enabled, above, for notifications to be sent.</inlineHelpText>
        <label>Send RSVP notifications to Leader?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sharing_Description__c</fullName>
        <label>Facebook Sharing Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sharing_Image__c</fullName>
        <label>Facebook Sharing Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sharing_Language__c</fullName>
        <description>For backend donation ask from advocacy form</description>
        <inlineHelpText>This is language that appears above the Sharing buttons on a take action back end donation ask.</inlineHelpText>
        <label>Sharing Language</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sharing_Title__c</fullName>
        <label>Facebook Sharing Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SierraRise_Campaign__c</fullName>
        <description>Does the Campaign qualify as a SierraRise campaign?  Program equals 4 or 9 and the Effort Type ( aka Cust1 field ) equals &quot;SR&quot;.</description>
        <formula>AND(
Effort_Type__r.Name = &apos;SR&apos;,
OR( Program__r.Name = &apos;4&apos;,Program__r.Name = &apos;9&apos;)
)</formula>
        <inlineHelpText>Does the Campaign qualify as a SierraRise campaign?</inlineHelpText>
        <label>SierraRise Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sierra_Club_Activity__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck only if creating an event for a partner organization or similar</inlineHelpText>
        <label>Sierra Club Activity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signup_Instructions__c</fullName>
        <label>Signup Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Signup_Restrictions__c</fullName>
        <label>Signup Restrictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sponsor_Description__c</fullName>
        <inlineHelpText>If you do not enter a value, this field will auto populate when you select a Club Entity and Save</inlineHelpText>
        <label>Sponsor Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <inlineHelpText>Times must be in format h:mm AM/PM</inlineHelpText>
        <label>Start Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Global__c</fullName>
        <description>Primary state in which local campaign is happening, not necessarily where tactic occurs.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Static_Message__c</fullName>
        <description>Message that cannot be changed by constituent. Concatenated with Default Message on send to target.</description>
        <label>Static Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Event will not be published until Status is set to Active</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                    <default>true</default>
                    <label>In Development</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>At Capacity</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Line__c</fullName>
        <description>Most recent send&apos;s subject line, populated by workflow</description>
        <label>Subject Line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sublist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sublist</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Sublist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Sublist)</relationshipLabel>
        <relationshipName>Campaigns_Sublist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Summary_Description__c</fullName>
        <inlineHelpText>A short description that may be displayed in public search results, etc.</inlineHelpText>
        <label>Text Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Form_Number__c</fullName>
        <description>The Number of the FormAssembly form number.  Generated when the survey is created in FormAssembly.</description>
        <inlineHelpText>The Number of the FormAssembly form number.  Generated when the survey is created in FormAssembly.</inlineHelpText>
        <label>Survey Form Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Campaign that represents the FormAssembly survey.</description>
        <label>Survey Form</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Survey Form</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaigns (Survey Form)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <formula>IF(NOT(ISBLANK(Survey_Form__c)),
&apos;https://sierraclub.tfaforms.net/&apos; + 
Survey_Form__r.Survey_Form_Number__c + 
&apos;?&apos; + 
IF((Channel__r.Name = &apos;EM&apos; &amp;&amp; List__r.Name &lt;&gt; &apos;NLS&apos;),&apos;data=%%=v(@ptoken)=%%&amp;&apos;,&apos;&apos;) + 
&apos;id=&apos; + 
Case_Safe_ID__c,
&apos;&apos;)</formula>
        <label>Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tactic_Owner_Category_Global__c</fullName>
        <label>Tactic Owner Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Tactic_Owner_Catego</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tactic_Owner_Global__c</fullName>
        <label>Tactic Owner</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tactic_Owner_Category_Global__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Reporting_Attribute_Tactic_Owner</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Panel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Test Panel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Test Panel)</relationshipLabel>
        <relationshipName>Campaigns_Test_Panel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Test Type</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Test Type)</relationshipLabel>
        <relationshipName>Campaigns_Test_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>2- to 4- letter code for your campaign or issue</inlineHelpText>
        <label>Theme</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Theme</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Theme)</relationshipLabel>
        <relationshipName>Campaigns_Theme</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_Tentative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Time Tentative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Local Time</fullName>
                    <default>true</default>
                    <label>Local Time</label>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Eastern</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Form_Giving_Amount__c</fullName>
        <label>Total Form Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Form_Giving_Count__c</fullName>
        <label>Total Form Giving Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Source_Giving_Amount__c</fullName>
        <label>Total Source Giving Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Source_Giving_Count__c</fullName>
        <label>Total Source Giving Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tweet_Count__c</fullName>
        <label>Tweet Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tweet_Goal__c</fullName>
        <label>Tweet Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL_Description__c</fullName>
        <defaultValue>&quot;Click Here for Additional Information&quot;</defaultValue>
        <label>URL Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_for_Additional_Information__c</fullName>
        <label>URL for Additional Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>URL_to_Share__c</fullName>
        <inlineHelpText>This is an auto-populated field that combines Public Root URL and Encrypted Id to create the URL for the Event.  You may replace this auto-populated value with a shortened version of the link by using bit.ly or another URL shortener.</inlineHelpText>
        <label>URL to Share</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unique_Clicks__c</fullName>
        <label>Unique Clicks</label>
        <summarizedField>Email_Summary_Statistic__c.Unique_Clicks__c</summarizedField>
        <summaryFilterItems>
            <field>Email_Summary_Statistic__c.Test_Send__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Summary_Statistic__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_Opens__c</fullName>
        <label>Unique Opens</label>
        <summarizedField>Email_Summary_Statistic__c.Unique_Opens__c</summarizedField>
        <summaryFilterItems>
            <field>Email_Summary_Statistic__c.Test_Send__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Summary_Statistic__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unpublish_Date__c</fullName>
        <label>Unpublish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unpublished_Notes__c</fullName>
        <label>Unpublished Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unsubscribes__c</fullName>
        <label>Unsubscribes</label>
        <summarizedField>Email_Summary_Statistic__c.Unsubscribes__c</summarizedField>
        <summaryFilterItems>
            <field>Email_Summary_Statistic__c.Test_Send__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Email_Summary_Statistic__c.Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Usable_for_Backend_Asks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Usable for Backend Asks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use E for all online promotions</inlineHelpText>
        <label>Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Vehicle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Vehicle)</relationshipLabel>
        <relationshipName>Campaigns_Vehicle</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Attribute__c.Attribute_Type__c</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Campaigns (Vendor)</relationshipLabel>
        <relationshipName>Campaigns_Vendor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <description>URL of a video to be displayed on an action page</description>
        <inlineHelpText>URL of a Youtube or Vimeo video to be displayed on the action page. For YouTube, use the embed code URL</inlineHelpText>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Waiver_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kwac__Action_Button_Text__c</fullName>
        <defaultValue>&quot;Send My Message&quot;</defaultValue>
        <inlineHelpText>Text that appears on the main submit button e.g. Sign Our Petition, Send My Message, etc.</inlineHelpText>
        <label>Action Button Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwac__Action_Page_Issues_Code__c</fullName>
        <inlineHelpText>Select the broad category that this message will fall into.  This field is required by congressional message submission webforms and will help ensure the message is seen by the correct staffer.</inlineHelpText>
        <label>Action Request Issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abortion</fullName>
                </value>
                <value>
                    <fullName>Acquisitions</fullName>
                </value>
                <value>
                    <fullName>Aerospace / Space</fullName>
                </value>
                <value>
                    <fullName>Agriculture / Food</fullName>
                </value>
                <value>
                    <fullName>Animal Rights</fullName>
                </value>
                <value>
                    <fullName>Appropriations</fullName>
                </value>
                <value>
                    <fullName>Arts / Humanities</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Census / Redistricting</fullName>
                </value>
                <value>
                    <fullName>Commerce / Business</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Congress</fullName>
                </value>
                <value>
                    <fullName>Consumer Affairs</fullName>
                </value>
                <value>
                    <fullName>Crime / Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Disabilities / ADA</fullName>
                </value>
                <value>
                    <fullName>Disaster / Emergency Management / FEMA</fullName>
                </value>
                <value>
                    <fullName>Economic Development / Economic Policy</fullName>
                </value>
                <value>
                    <fullName>Education / Schools</fullName>
                </value>
                <value>
                    <fullName>Elections / Campaigns</fullName>
                </value>
                <value>
                    <fullName>Energy / Utilities</fullName>
                </value>
                <value>
                    <fullName>Entertainment / Media</fullName>
                </value>
                <value>
                    <fullName>Environment / Natural Resources</fullName>
                    <default>true</default>
                    <label>Environment / Natural Resources</label>
                </value>
                <value>
                    <fullName>Family / Children</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Foreign Policy / International Affairs</fullName>
                </value>
                <value>
                    <fullName>Gambling</fullName>
                </value>
                <value>
                    <fullName>Government Operations / Government Reform</fullName>
                </value>
                <value>
                    <fullName>Grants / Interns</fullName>
                </value>
                <value>
                    <fullName>Gun Issues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kwac__Action_Request2_Id__c</fullName>
        <inlineHelpText>Unique Id passed into the request URL for Action Requests to identify this action</inlineHelpText>
        <label>Action Request Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kwac__Action_Type__c</fullName>
        <inlineHelpText>How should this action work? If you choose &quot;Contact Officials&quot;, messages will be sent via the EOCS Service. It requires all fields. &quot;No Delivery&quot; messages will just be recorded in your system. &quot;-Location required&quot; needs address info.</inlineHelpText>
        <label>Action Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Petition</fullName>
                </value>
                <value>
                    <fullName>Contact Officials - All info required</fullName>
                </value>
                <value>
                    <fullName>No Delivery - Location required</fullName>
                </value>
                <value>
                    <fullName>No Delivery - Minimal info required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kwac__Action_for_New_Supporters__c</fullName>
        <inlineHelpText>Select whether and how you would like to store information on people who take action on this request who are not in your Salesforce database yet.</inlineHelpText>
        <label>Action for New Supporters</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create Contact</fullName>
                </value>
                <value>
                    <fullName>Create Lead</fullName>
                </value>
                <value>
                    <fullName>Capture Action Only</fullName>
                </value>
                <value>
                    <fullName>Use Custom Process</fullName>
                    <default>true</default>
                    <label>Use Custom Process</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kwac__Additional_Display_Field_1__c</fullName>
        <inlineHelpText>Chose an additional field to display as part of the elected official&apos;s listing on the Action Request page that people will see when they take action.</inlineHelpText>
        <label>Additional Display Field 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address Line1</fullName>
                </value>
                <value>
                    <fullName>Address Line2</fullName>
                </value>
                <value>
                    <fullName>Address Line3</fullName>
                </value>
                <value>
                    <fullName>Address Line4</fullName>
                </value>
                <value>
                    <fullName>Chamber</fullName>
                </value>
                <value>
                    <fullName>District</fullName>
                </value>
                <value>
                    <fullName>District Code</fullName>
                </value>
                <value>
                    <fullName>Elected</fullName>
                </value>
                <value>
                    <fullName>Ethnicity</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Gender</fullName>
                </value>
                <value>
                    <fullName>Legal Name</fullName>
                </value>
                <value>
                    <fullName>Next Election</fullName>
                </value>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Party</fullName>
                </value>
                <value>
                    <fullName>Reelect Status</fullName>
                </value>
                <value>
                    <fullName>Seniority</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Terms Served</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Webform</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>YouTube</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>